Phase 3 without fine tune

--- a/Phase3.ipynb
+++ b/Phase3.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ae586be2",
    "metadata": {},
    "outputs": [
@@ -386,8 +386,36 @@
       "Epoch 3/30\n",
       "\u001b[1m212/212\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m695s\u001b[0m 3s/step - accuracy: 0.9319 - loss: 0.2136 - val_accuracy: 0.9594 - val_loss: 0.1144\n",
       "Epoch 4/30\n",
-      "\u001b[1m 10/212\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m11:23\u001b[0m 3s/step - accuracy: 0.9672 - loss: 0.1033"
+      "\u001b[1m212/212\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m779s\u001b[0m 3s/step - accuracy: 0.9440 - loss: 0.1747 - val_accuracy: 0.9470 - val_loss: 0.1476\n",
+      "Epoch 5/30\n",
+      "\u001b[1m212/212\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m633s\u001b[0m 3s/step - accuracy: 0.9413 - loss: 0.1848 - val_accuracy: 0.9535 - val_loss: 0.1464\n",
+      "Epoch 6/30\n",
+      "\u001b[1m212/212\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m654s\u001b[0m 3s/step - accuracy: 0.9514 - loss: 0.1574 - val_accuracy: 0.9529 - val_loss: 0.1281\n",
+      "Epoch 7/30\n",
+      "\u001b[1m212/212\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m632s\u001b[0m 3s/step - accuracy: 0.9613 - loss: 0.1276 - val_accuracy: 0.9776 - val_loss: 0.0574\n",
+      "Epoch 8/30\n",
+      "\u001b[1m212/212\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m636s\u001b[0m 3s/step - accuracy: 0.9542 - loss: 0.1470 - val_accuracy: 0.9600 - val_loss: 0.1191\n",
+      "Epoch 9/30\n",
+      "\u001b[1m212/212\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m637s\u001b[0m 3s/step - accuracy: 0.9626 - loss: 0.1182 - val_accuracy: 0.9346 - val_loss: 0.1955\n",
+      "Epoch 10/30\n",
+      "\u001b[1m212/212\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m848s\u001b[0m 4s/step - accuracy: 0.9612 - loss: 0.1123 - val_accuracy: 0.9441 - val_loss: 0.1579\n",
+      "Epoch 11/30\n",
+      "\u001b[1m212/212\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m902s\u001b[0m 4s/step - accuracy: 0.9674 - loss: 0.1019 - val_accuracy: 0.9494 - val_loss: 0.1532\n",
+      "Epoch 12/30\n",
+      "\u001b[1m212/212\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m843s\u001b[0m 4s/step - accuracy: 0.9643 - loss: 0.1062 - val_accuracy: 0.9564 - val_loss: 0.1168\n",
+      "Epoch 12: early stopping\n",
+      "Restoring model weights from the end of the best epoch: 7.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x25041189f30>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -403,6 +431,34 @@
     "    epochs=30,\n",
     "    callbacks=[early]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fb0b8ff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"Phase3.keras\")   # modern recommended format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ccc0999d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save(\"Phase3.h5\")"
    ]
   }
  ],
