--- a/ku_building_cnn_phase2.ipynb
+++ b/ku_building_cnn_phase2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "475ae16e",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
     "BATCH = 32\n",
     "SEED = 42\n",
     "\n",
-    "MODEL_NAME = 'cnn_model_increased_image'\n",
+    "MODEL_NAME = 'cnn_model_phase2'\n",
     "\n",
     "tf.keras.utils.set_random_seed(SEED)"
    ]
